--- a/index.html
+++ b/index.html
@@ -1331,6 +1331,15 @@
         </div>
     </div>
     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" id="img-emoji-default"/>
+    <script src="src/util/format.js"></script>
+    <script src="src/controller/whatsAppController.js"></script>
+    <script src="src/app.js"></script>
+
+
+
+
 </body>
+
+
 
 </html>
