--- a/index.html
+++ b/index.html
@@ -1330,13 +1330,11 @@
             </div>
         </div>
     </div>
+
     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" id="img-emoji-default"/>
-    <script src="src/util/format.js"></script>
-    <script src="src/controller/cameraController.js"></script>
-    <script src="src/controller/whatsAppController.js"></script>
-    <script src="src/app.js"></script>
 
-
+    <script src="dist/pdf.worker.bundle.js"></script>
+    <script src="dist/app.bundle.js"></script>
 
 
 </body>
