--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                                                                 <div class="_3Bxar">
                                                                     <span>
                                                                         <div class="_15G96">
-                                                                            <span class="OUeyt messages-count-new" style="display:none;">1</span>
+                                                                            <span id="messages-count" class="OUeyt messages-count-new">1</span>
                                                                         </div>
                                                                 </div>
                                                                 </span>
